# VSSSClient-RAS-UFAL

./: CMakeLists.txt  README.md  main.cpp
bht/: VSSSBht.btproj  basic_bht.xml
clients/actuator/: actuatorclient.h
clients/referee/: refereeclient.h
clients/replacer/: replacerclient.h
clients/vision/: visionclient.h
